corpus/property-binding.txt
================
Property binding
================

<element [property]="value"/>

---

(fragment
  (element
    (self_closing_tag
      (tag_name)
      (attribute
        (property_binding
          (binding_name
            (identifier)
          )
          (expression
            (identifier)
          )
        )
      )
    )
  )
)

======================
Array Property binding
======================

<element [icon]="['fas', 'chevron']"/>

---

(fragment
  (element
    (self_closing_tag
      (tag_name)
      (attribute
        (property_binding
          (binding_name
            (identifier)
          )
          (expression
            (array
              (expression
                (string)
              )
              (expression
                (string)
              )
            )
          )
        )
      )
    )
  )
)

========================
Array Binding with pipes
========================

<element [values]="[(someValue | async), syncValue]"/>

---

(fragment
  (element
    (self_closing_tag
      (tag_name)
      (attribute
        (property_binding
          (binding_name
            (identifier)
          )
          (expression
            (array
              (expression
                (group
                  (expression
                    (identifier)
                    (pipe_sequence
                      (pipe_operator)
                      (pipe_call
                        (identifier)
                      )
                    )
                  )
                )
              )
              (expression
                (identifier)
              )
            )
          )
        )
      )
    )
  )
)


======================
String literal binding
======================

<element [property]="'value' + obj.value" [other]="'200px'"/>

---

(fragment
  (element
    (self_closing_tag
      (tag_name)
      (attribute
        (property_binding
          (binding_name
            (identifier)
          )
          (binary_expression
            (string)
            (member_expression
              (identifier)
              (identifier)
            )
          )
        )
      )
      (attribute
        (property_binding
          (binding_name
            (identifier)
          )
          (expression
            (string)
          )
        )
      )
    )
  )
)

===========
Subproperty
===========

<element [attr.property]="value"/>

---

(fragment
  (element
    (self_closing_tag
      (tag_name)
      (attribute
        (property_binding
          (binding_name
            (member_expression
              (identifier)
              (identifier)
            )
          )
          (expression
            (identifier)
          )
        )
      )
    )
  )
)


==========
With pipes
==========

<element [property]="value$ | async"/>

---

(fragment
  (element
    (self_closing_tag
      (tag_name)
      (attribute
        (property_binding
          (binding_name
              (identifier)
          )
          (expression
            (identifier)
            (pipe_sequence
              (pipe_operator)
              (pipe_call
                (identifier)
              )
            )
          )
        )
      )
    )
  )
)

===============
Two-way binding
===============

<element [(property)]="value"/>

---

(fragment
  (element
    (self_closing_tag
      (tag_name)
      (attribute
        (two_way_binding
          (binding_name
            (identifier)
          )
          (expression
            (identifier)
          )
        )
      )
    )
  )
)

=============
Event binding
=============

<element (click)="handle($event)"/>

---

(fragment
  (element
    (self_closing_tag
      (tag_name)
      (attribute
        (event_binding
          (binding_name
            (identifier)
          )
          (expression
            (call_expression
              (identifier)
              (arguments
                (identifier)
              )
            )
          )
        )
      )
    )
  )
)

========================
Event binding expression
========================

<element (click)="property = $event" />

---

(fragment
  (element
    (self_closing_tag
      (tag_name)
      (attribute
        (event_binding
          (binding_name
            (identifier)
          )
          (assignment_expression
            (identifier)
            (expression
              (identifier)
            )
          )
        )
      )
    )
  )
)


=================
Regular attribute
=================

<element attr="value"/>

---

(fragment
  (element
    (self_closing_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
         (attribute_value)
        )
      )
    )
  )
)

=====================
Empty attribute value
=====================

<span [property]=""></span>

---

(fragment
  (element
    (start_tag
      (tag_name)
      (attribute
        (property_binding
          (binding_name
            (identifier)
          )
        )
      )
    )
    (end_tag
      (tag_name)
    )
  )
)

==================
Animation property
==================

<span [@someAnimation]="condition"></span>

---

(fragment
  (element
    (start_tag
      (tag_name)
      (attribute
        (property_binding
          (binding_name
            (identifier)
          )
          (expression
            (identifier)
          )
        )
      )
    )
    (end_tag
      (tag_name)
    )
  )
)
